feat: namespace crud
